<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="bottom"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:theme="@style/TextLabel"
        android:id="@+id/email_text_input_layout"
        >

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_300"
            android:layout_marginBottom="16dp"
            android:hint="@string/nUsuario"
            android:inputType="textEmailAddress" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/password_text_input_layout"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_300"
            android:layout_marginBottom="16dp"
            android:hint="@string/"
            android:inputType="textPassword" />
    </LinearLayout>



    <Button
        android:id="@+id/custom_signin_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:tag="custom_login_button"
        android:layout_margin="16dp"
        android:text="@string/sign_in"

        android:textColor="@color/white" />
    <TextView
        android:id="@+id/custom_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/sing_up"/>


</LinearLayout>